add navigation section and resources

--- a/index.html
+++ b/index.html
@@ -40,10 +40,85 @@
   </head>
 
 
+  <body id="top">
+
+    <!-- header
+    ================================================== -->
+    <header class="s-header">
+
+      <div class="header-logo">
+        <a href="index.html" class="site-logo">
+          <img src="images/big-logo.png" alt="Homepage">
+        </a>
+      </div>
+
+      <nav class="header-nav">
+        <a href="#0" class="header-nav__close" title="close"><span>Close</span></a>
+
+        <div class="header-nav__content">
+          <h3>Navigation</h3>
+
+          <ul>
+            <li class="current"><a class="smoothscroll" href="#home" title="home">Home</a></li>
+            <li class="smoothscroll" href="#about" title="about">Services</a></li>
+            <li class="smoothscroll" href="#works" title="works">Works</a></li>
+            <li class="smoothscroll" href="#contact" title="Contact">Clients</a></
+          </ul>
+
+          <p>Social links</p>
+
+          <ul class="header-nav__social">
+            <li>
+                <a href="#"><i class="fa fa-facebook"></i></a>
+            </li>
+            <li>
+                <a href="#"><i class="fa fa-twitter"></i></a>
+            </li>
+            <li>
+                <a href="#"><i class="fa fa-instagram"></i></a>
+            </li>
+            <li>
+                <a href="#"><i class="fa fa-behance"></i></a>
+            </li>
+            <li>
+                <a href="#"><i class="fa fa-dribbble"></i></a>
+            </li>
+          </ul>
+
+        </div>
+
+      </nav>
+
+      <a href="#0" class="header-menu-toggle">
+        <span class="header-menu-text">Menu</span>
+        <span class="header-menu-icon">Menu</span>
+      </a>
+
+    </header>
+    <!-- end header
+    ================================================== -->
 
 
 
-  <body>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
   </body>
 </html>
