structure and add home content

--- a/index.html
+++ b/index.html
@@ -98,6 +98,51 @@
     <!-- end header
     ================================================== -->
 
+    <!-- home
+    ================================================== -->
+    <section id="home" class="s-home target-section" data-parallax="scroll" data-image-src="images/hero-bg.jpg" data-natural-width=3000 data-natural-height=2000 data-position-y=center>
+
+      <div class="overlay"></div>
+      <div class="shadow-overlay"></div>
+
+      <div class="home-content">
+
+        <div class="row home-content__main">
+
+          <h3>What triangle I'm I?.</h3>
+
+          <h1>
+            Take our triangle detector test <br>
+            prove which triangular "crime" <br>
+            you are guilty of. <br>
+          </h1>
+
+          <div class="home-content__buttons">
+              <a href="#contact" class="smoothscroll btn btn--stroke">
+                Go to detector
+              </a>
+              <a href="#about" class="smoothscroll btn btn--stroke">
+                Contribute
+              </a>
+          </div>
+
+          <div class="home-content__scroll">
+            <a href="#about" class="scroll-link smoothscroll">
+              Scroll Down
+            </a>
+          </div>
+
+        </div>
+
+        <div class="home-content__line"></div>
+
+      </div>
+
+    </section>
+    <!-- end home
+    ================================================== -->
+
+
 
 
 
