add and format input and answer section.

--- a/index.html
+++ b/index.html
@@ -142,6 +142,150 @@
     <!-- end home
     ================================================== -->
 
+    <!-- Input and answer
+    ================================================== -->
+    <section id="contact" class="s-contact">
+
+      <div class="overlay"></div>
+      <div class="contact__line"></div>
+
+      <div class="row section-header" data-aos="fade-up">
+        <div class="col-full">
+          <h3 class="subhead">Log in evidence into log sheet.</h3>
+          <h1 class="display-2 display-2--light">Please submit evidence to know the identity of the "suspect".</h1>
+        </div>
+      </div>
+
+      <div class="row contact-content" data-aos="fade-up">
+
+        <div class="contact-primary">
+
+          <h3 class="h6">Please submit evidence to know the identity of the "suspect"</h3>
+
+          <form name="contactForm" id="contactForm" method="post" action="" novalidate="novalidate">
+
+            <fieldset>
+
+              <div class="col-six tab-full right footer-subscribe">
+
+              <div class="subscribe-form">
+                <form id="mc-form" class="group" novalidate="true">
+                  <input type="email" value="" name="EMAIL" class="email" id="mc-email" placeholder="length a" required="">
+                </form>
+
+                <div class="subscribe-form">
+
+                  <form id="mc-form" class="group" novalidate="true">
+                    <input type="email" value="" name="EMAIL" class="email" id="mc-email" placeholder="length b" required="">
+                  </form>
+              </div>
+
+              <div class="form-field">
+                <input name="contactName" type="text" id="contactName" placeholder="Your Name" value="" minlength="2" required="" aria-required="true" class="full-width">
+              </div>
+
+              <div class="form-field">
+                <button class="full-width btn--primary">Enter</button>
+                <div class="submit-loader">
+                  <div class="text-loader">retrieving answer...</div>
+                  <div class="s-loader">
+                    <div class="bounce1"></div>
+                    <div class="bounce2"></div>
+                    <div class="bounce3"></div>
+                  </div>
+                </div>
+              </div>
+
+            </fieldset>
+          </form>
+
+          <!-- contact-warning -->
+          <div class="message-warning">
+            Something went wrong. Please try again.
+          </div>
+
+          <!-- contact-success -->
+          <div class="message-success">
+            Your message was sent, thank you!<br>
+          </div>
+
+        </div> <!-- end contact-primary -->
+
+        <div class="contact-secondary">
+          <div class="contact-info">
+
+            <h3 class="h6 hide-on-fullwidth">Contact Info</h3>
+
+            <div class="cinfo">
+              <h5>Report a problem</h5>
+
+            </div>
+
+          </div> <!-- end contact-info -->
+        </div> <!-- end contact-secondary -->
+
+      </div> <!-- end contact-content -->
+
+    </section>
+    <!-- Input and answer
+
+
+
+
+
+
+
+
+
+
+
+
+
+    <!-- footer
+    ================================================== -->
+    <footer>
+      <div class="row footer-main">
+
+        <div class="col-six tab-full left footer-desc">
+
+          <div class="footer-logo"></div>
+          <h4>Get Notified</h4>
+          <p>Be the first to know all things math by subscribing below.</p>
+
+        </div>
+
+        <div class="col-six tab-full right footer-subscribe">
+
+          <div class="subscribe-form">
+            <form id="mc-form" class="group" novalidate="true">
+                <input type="email" value="" name="EMAIL" class="email" id="mc-email" placeholder="Email" required="">
+                <input type="submit" name="subscribe" value="Subscribe">
+                <label for="mc-email" class="subscribe-message"></label>
+            </form>
+          </div>
+        </div>
+
+
+      <!-- end main footer -->
+
+    <!-- footer bottom -->
+    <div class="row footer-bottom">
+
+            <div class="col-twelve">
+                <div class="copyright">
+                    <span>© Copyright tri-pi 2018</span>
+                    <span>Triangle Detector by <a href="https://www.behance.net/Tc-mwangi/">wm2</a></span>
+                </div>
+
+                <div class="go-top">
+                    <a class="smoothscroll" title="Back to Top" href="#top"><i class="icon-arrow-up" aria-hidden="true"></i></a>
+                </div>
+            </div>
+
+        </div>
+
+  </footer>
+        <!-- end footer-bottom -->
 
 
 
