--- a/index.html
+++ b/index.html
@@ -20,22 +20,15 @@
 
     <!--- JS
     ================================================== -->
-    <script src="js/ip.js"></script>
     <script src="js/pace.min.js"></script>
     <script src="js/modernizr.js"></script>
+    <script src="js/ip.js"></script>
 
 
     <!-- favicons
     ================================================== -->
-    <link rel="apple-touch-icon" sizes="180x180" href="images/favicon/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="images/favicon-16x16.png">
-    <link rel="manifest" href="images/favicon/site.webmanifest">
-    <link rel="mask-icon" href="images/favicon/safari-pinned-tab.svg" color="#5bbad5">
-    <meta name="msapplication-TileColor" content="#da532c">
-    <meta name="theme-color" content="#ffffff">
-    <link rel="shortcut icon" href="images/faviconfavicon.ico" type="image/x-icon">
-    <link rel="icon" href="images/faviconfavicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="icon" href="favicon.png" type="image/x-icon">
 
   </head>
 
@@ -54,39 +47,6 @@
 
       <nav class="header-nav">
         <a href="#0" class="header-nav__close" title="close"><span>Close</span></a>
-
-        <div class="header-nav__content">
-          <h3>Navigation</h3>
-
-          <ul>
-            <li class="current"><a class="smoothscroll" href="#home" title="home">Home</a></li>
-            <li class="smoothscroll" href="#about" title="about">Services</a></li>
-            <li class="smoothscroll" href="#works" title="works">Works</a></li>
-            <li class="smoothscroll" href="#contact" title="Contact">Clients</a></
-          </ul>
-
-          <p>Social links</p>
-
-          <ul class="header-nav__social">
-            <li>
-                <a href="#"><i class="fa fa-facebook"></i></a>
-            </li>
-            <li>
-                <a href="#"><i class="fa fa-twitter"></i></a>
-            </li>
-            <li>
-                <a href="#"><i class="fa fa-instagram"></i></a>
-            </li>
-            <li>
-                <a href="#"><i class="fa fa-behance"></i></a>
-            </li>
-            <li>
-                <a href="#"><i class="fa fa-dribbble"></i></a>
-            </li>
-          </ul>
-
-        </div>
-
       </nav>
 
       <a href="#0" class="header-menu-toggle">
@@ -244,48 +204,30 @@
     <!-- footer
     ================================================== -->
     <footer>
+
       <div class="row footer-main">
+        <div class="footer-logo"></div>
 
-        <div class="col-six tab-full left footer-desc">
+        <div class="col-twelve">
+          <div class="copyright">
+            <span>© Copyright tri-pi 2018</span>
+            <span>Triangle Detector by <a href="https://www.behance.net/Tc-mwangi/">wm2</a></span>
+          </div>
 
-          <div class="footer-logo"></div>
-          <h4>Get Notified</h4>
-          <p>Be the first to know all things math by subscribing below.</p>
-
-        </div>
-
-        <div class="col-six tab-full right footer-subscribe">
-
-          <div class="subscribe-form">
-            <form id="mc-form" class="group" novalidate="true">
-                <input type="email" value="" name="EMAIL" class="email" id="mc-email" placeholder="Email" required="">
-                <input type="submit" name="subscribe" value="Subscribe">
-                <label for="mc-email" class="subscribe-message"></label>
-            </form>
+          <div class="go-top">
+            <a class="smoothscroll" title="Back to Top" href="#top"><i class="icon-arrow-up" aria-hidden="true"></i></a>
           </div>
         </div>
 
+      </div> <!-- end footer-bottom -->
 
-      <!-- end main footer -->
+    </footer> <!-- end footer -->
 
-    <!-- footer bottom -->
-    <div class="row footer-bottom">
-
-            <div class="col-twelve">
-                <div class="copyright">
-                    <span>© Copyright tri-pi 2018</span>
-                    <span>Triangle Detector by <a href="https://www.behance.net/Tc-mwangi/">wm2</a></span>
-                </div>
-
-                <div class="go-top">
-                    <a class="smoothscroll" title="Back to Top" href="#top"><i class="icon-arrow-up" aria-hidden="true"></i></a>
-                </div>
-            </div>
-
-        </div>
-
-  </footer>
-        <!-- end footer-bottom -->
+    <!-- Java Script
+      ================================================== -->
+    <script src="js/jquery-3.2.1.min.js"></script>
+    <script src="js/plugins.js"></script>
+    <script src="js/main.js"></script>
 
 
 
