add styles to base.css

--- a/index.html
+++ b/index.html
@@ -102,104 +102,83 @@
     <!-- end home
     ================================================== -->
 
-    <!-- Input and answer
-    ================================================== -->
-    <section id="contact" class="s-contact">
+    <!-- Form and Output section
+        ================================================== -->
+      <section id="contact" class="s-contact">
 
-      <div class="overlay"></div>
-      <div class="contact__line"></div>
+        <div class="overlay"></div>
+        <div class="contact__line"></div>
 
-      <div class="row section-header" data-aos="fade-up">
-        <div class="col-full">
-          <h3 class="subhead">Log in evidence into log sheet.</h3>
-          <h1 class="display-2 display-2--light">Please submit evidence to know the identity of the "suspect".</h1>
+        <div class="row section-header" data-aos="fade-up">
+          <div class="col-full">
+            <h3 class="subhead">Log in evidence.</h3>
+            <h1 class="display-2 display-2--light">Log<br>
+              sheet<br>
+            </h1>
+          </div>
         </div>
-      </div>
 
-      <div class="row contact-content" data-aos="fade-up">
+        <div class="row contact-content" data-aos="fade-up">
 
-        <div class="contact-primary">
+          <div class="contact-primary">
 
-          <h3 class="h6">Please submit evidence to know the identity of the "suspect"</h3>
+            <h3 class="h6">Surrender evidence to know the identity of the "suspect"</h3>
 
-          <form name="contactForm" id="contactForm" method="post" action="" novalidate="novalidate">
+            <form name="contactForm" id="contactForm" method="post" action="" novalidate="novalidate">
+              <fieldset>
 
-            <fieldset>
+                <div class="col-six tab-full right footer-subscribe">
+                  <div class="subscribe-form">
+                    <form id="mc-form" class="group" novalidate="true">
 
-              <div class="col-six tab-full right footer-subscribe">
+                      <input type="email" value="" name="EMAIL" class="email" id="mc-email" placeholder="length a" required="">
 
-              <div class="subscribe-form">
-                <form id="mc-form" class="group" novalidate="true">
-                  <input type="email" value="" name="EMAIL" class="email" id="mc-email" placeholder="length a" required="">
-                </form>
+                      <input type="email" value="" name="EMAIL" class="email" id="mc-email" placeholder="length b" required="">
 
-                <div class="subscribe-form">
+                      <input type="email" value="" name="EMAIL" class="email" id="mc-email" placeholder="length c" required="">
 
-                  <form id="mc-form" class="group" novalidate="true">
-                    <input type="email" value="" name="EMAIL" class="email" id="mc-email" placeholder="length b" required="">
-                  </form>
-              </div>
+                      <label for="mc-email" class="subscribe-message"></label>
+                    </form>
+                  </div>
 
-              <div class="form-field">
-                <input name="contactName" type="text" id="contactName" placeholder="Your Name" value="" minlength="2" required="" aria-required="true" class="full-width">
-              </div>
-
-              <div class="form-field">
-                <button class="full-width btn--primary">Enter</button>
-                <div class="submit-loader">
-                  <div class="text-loader">retrieving answer...</div>
-                  <div class="s-loader">
-                    <div class="bounce1"></div>
-                    <div class="bounce2"></div>
-                    <div class="bounce3"></div>
+                <div class="form-field">
+                  <button class="full-width btn--primary">Submit</button>
+                  <div class="submit-loader">
+                    <div class="text-loader">Sending...</div>
+                    <div class="s-loader">
+                      <div class="bounce1"></div>
+                      <div class="bounce2"></div>
+                      <div class="bounce3"></div>
+                    </div>
                   </div>
                 </div>
-              </div>
 
-            </fieldset>
-          </form>
+              </fieldset>
+            </form>
 
-          <!-- contact-warning -->
-          <div class="message-warning">
-            Something went wrong. Please try again.
-          </div>
-
-          <!-- contact-success -->
-          <div class="message-success">
-            Your message was sent, thank you!<br>
-          </div>
-
-        </div> <!-- end contact-primary -->
-
-        <div class="contact-secondary">
-          <div class="contact-info">
-
-            <h3 class="h6 hide-on-fullwidth">Contact Info</h3>
-
-            <div class="cinfo">
-              <h5>Report a problem</h5>
-
+            <!-- contact-warning -->
+            <div class="message-warning">
+              Something went wrong. Please try again.
             </div>
 
-          </div> <!-- end contact-info -->
-        </div> <!-- end contact-secondary -->
+            <!-- contact-success -->
+            <div class="message-success">
+              Your message was sent, thank you!<br>
+            </div>
 
-      </div> <!-- end contact-content -->
+          </div> <!-- end contact-primary -->
 
-    </section>
-    <!-- Input and answer
+          <div class="contact-secondary">
+            <div class="contact-info">
 
+              <h5>Report a problem</h5>
 
+            </div> <!-- end contact-info -->
+          </div> <!-- end contact-secondary -->
 
+        </div> <!-- end contact-content -->
 
-
-
-
-
-
-
-
-
+      </section> <!-- end s-contact -->
 
     <!-- footer
     ================================================== -->
