edit navigation bar, resize home logo

--- a/index.html
+++ b/index.html
@@ -15,12 +15,11 @@
     <!--- CSS
     ================================================== -->
     <link rel="stylesheet" href="css/base.css">
-    <link rel="stylesheet" href="css/vendor.css">
     <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" type="text/css" href="your_website_domain/css_root/flaticon.css">
 
     <!--- JS
     ================================================== -->
-    <script src="js/pace.min.js"></script>
     <script src="js/modernizr.js"></script>
     <script src="js/ip.js"></script>
 
@@ -41,7 +40,7 @@
 
       <div class="header-logo">
         <a href="index.html" class="site-logo">
-          <img src="images/big-logo.png" alt="Homepage">
+          <img src="images/logos_logo-yg.png" alt="Homepage">
         </a>
       </div>
 
@@ -50,8 +49,7 @@
       </nav>
 
       <a href="#0" class="header-menu-toggle">
-        <span class="header-menu-text">Menu</span>
-        <span class="header-menu-icon">Menu</span>
+        <span class="header-menu-text">""</span>
       </a>
 
     </header>
@@ -60,7 +58,7 @@
 
     <!-- home
     ================================================== -->
-    <section id="home" class="s-home target-section" data-parallax="scroll" data-image-src="images/hero-bg.jpg" data-natural-width=3000 data-natural-height=2000 data-position-y=center>
+    <section id="home" class="s-home target-section" data-parallax="scroll" data-image-src="images/logos_logo-yg.png" data-natural-width=3000 data-natural-height=2000 data-position-y=center>
 
       <div class="overlay"></div>
       <div class="shadow-overlay"></div>
@@ -205,30 +203,7 @@
     <!-- Java Script
       ================================================== -->
     <script src="js/jquery-3.2.1.min.js"></script>
-    <script src="js/plugins.js"></script>
     <script src="js/main.js"></script>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
   </body>
 </html>
