add licence information

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 
     <!--- CSS
     ================================================== -->
-    <link rel="stylesheet" href="css/base.css">
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" type="text/css"href="css/base.css">
+    <link rel="stylesheet" type="text/css" href="css/main.css">
     <link rel="stylesheet" type="text/css" href="your_website_domain/css_root/flaticon.css">
 
     <!--- JS
@@ -37,20 +37,19 @@
     <!-- header
     ================================================== -->
     <header class="s-header">
-
       <div class="header-logo">
         <a href="index.html" class="site-logo">
           <img src="images/logos_logo-yg.png" alt="Homepage">
         </a>
       </div>
-      
+
     </header>
     <!-- end header
     ================================================== -->
 
     <!-- home
     ================================================== -->
-    <section id="home" class="s-home target-section" data-parallax="scroll" data-image-src="images/logos_logo-yg.png" data-natural-width=3000 data-natural-height=2000 data-position-y=center>
+    <section id="home" class="s-home target-section" data-parallax="scroll" data-image-src="images/background-math_Background-math.jpg" data-natural-width=3000 data-natural-height=2000 data-position-y=center>
 
       <div class="overlay"></div>
       <div class="shadow-overlay"></div>
@@ -69,12 +68,11 @@
 
           <div class="home-content__buttons">
               <a href="#contact" class="smoothscroll btn btn--stroke">
-                Go to detector
-              </a>
-              <a href="#about" class="smoothscroll btn btn--stroke">
-                Contribute
+                Start
               </a>
           </div>
+
+
 
           <div class="home-content__scroll">
             <a href="#about" class="scroll-link smoothscroll">
@@ -92,7 +90,7 @@
     <!-- end home
     ================================================== -->
 
-    <!-- Form and Output section
+    <!-- Form section
         ================================================== -->
       <section id="contact" class="s-contact">
 
@@ -101,7 +99,7 @@
 
         <div class="row section-header" data-aos="fade-up">
           <div class="col-full">
-            <h3 class="subhead">Log in evidence.</h3>
+            <h3 class="subhead">Log Sheet</h3>
             <h1 class="display-2 display-2--light">Log<br>
               sheet<br>
             </h1>
@@ -159,9 +157,14 @@
           </div> <!-- end contact-primary -->
 
           <div class="contact-secondary">
+            <h5>Be the next Tri-champion</h5>
+            <div class="contact-info">
+              <img src="images/kids_char-1-boy.png" alt="avatar">
+            </div>
+
             <div class="contact-info">
 
-              <h5>Report a problem</h5>
+
 
             </div> <!-- end contact-info -->
           </div> <!-- end contact-secondary -->
