edit README.md file

--- a/index.html
+++ b/index.html
@@ -119,20 +119,20 @@
                   <div class="subscribe-form">
                     <form id="mc-form" class="group" novalidate="true">
 
-                      <input type="email" value="" name="EMAIL" class="email" id="mc-email" placeholder="length a" required="">
+                      <input type="number" value="" name="EMAIL" class="email" id="mc-email" placeholder="length a" required="">
 
-                      <input type="email" value="" name="EMAIL" class="email" id="mc-email" placeholder="length b" required="">
+                      <input type="number" value="" name="EMAIL" class="email" id="mc-email" placeholder="length b" required="">
 
-                      <input type="email" value="" name="EMAIL" class="email" id="mc-email" placeholder="length c" required="">
+                      <input type="number" value="" name="EMAIL" class="email" id="mc-email" placeholder="length c" required="">
 
                       <label for="mc-email" class="subscribe-message"></label>
                     </form>
                   </div>
 
                 <div class="form-field">
-                  <button class="full-width btn--primary">Submit</button>
+                  <button class="full-width btn--primary">Initialize</button>
                   <div class="submit-loader">
-                    <div class="text-loader">Sending...</div>
+                    <div class="text-loader">Sending Evidence...</div>
                     <div class="s-loader">
                       <div class="bounce1"></div>
                       <div class="bounce2"></div>
@@ -151,7 +151,7 @@
 
             <!-- contact-success -->
             <div class="message-success">
-              Your message was sent, thank you!<br>
+              The evidence was received, thank you!<br>
             </div>
 
           </div> <!-- end contact-primary -->
