--- a/index.html
+++ b/index.html
@@ -110,9 +110,10 @@
 
           <div class="user-primary">
 
-            <h3 class="h6">Surrender evidence to know the identity of the "suspect"</h3>
+            <h2 class="h6">Surrender evidence to know the identity of the "suspect"</h2>
 
             <form name="userForm" id="userForm" method="post" action="" novalidate="novalidate">
+
               <fieldset>
 
                 <div class="col-six tab-full right footer-subscribe">
@@ -126,14 +127,13 @@
 
                       <input type="text" value="" name="EMAIL" class="email" id="length c" placeholder="length c" required="">
 
-                      <input type="submit" name="" value="Submit" onclick="formdata()">
+                    <div class="form-field">
+
+                      <input id="button" class="full-width btn--primary" type="button" name="Initialize" value="Launch Enquiry">
 
                     </form>
+
                   </div>
-
-                <div class="form-field">
-
-                  <button class="full-width btn--primary" id="btn">Initialize</button>
 
                 </div>
 
