add new function and feed arguments a, b and c.

--- a/index.html
+++ b/index.html
@@ -119,17 +119,17 @@
                 <div class="col-six tab-full right footer-subscribe">
                   <div class="subscribe-form">
 
-                    <form id="mc-form" class="group" novalidate="true">
+                    <form id=" " class="group" novalidate="true">
 
-                      <input type="text" value="" name="EMAIL" class="email" id="length a" placeholder="length a">
+                      <input id="length a" type="text" placeholder="length a">
 
-                      <input type="text" value="" name="EMAIL" class="email" id="length b" placeholder="length b" required="">
+                      <input id="length b" type="text" placeholder="length b">
 
-                      <input type="text" value="" name="EMAIL" class="email" id="length c" placeholder="length c" required="">
+                      <input id="length c" type="text" placeholder="length c">
 
-                    <div class="form-field">
+                      <button  type="button" value="LAUNCH ENQUIRY" onclick="user_Output();">LAUNCH ENQUIRY</button>
 
-                      <input id="button" class="full-width btn--primary" type="button" name="Initialize" value="Launch Enquiry" onclick="user_Output();">
+                      <p id="clickMe"></p>
 
                     </form>
 
