fix conditional statements to give expected outputs.

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
     <!-- home
     ================================================== -->
-    <section id="home" class="s-home target-section" data-parallax="scroll" data-image-src="images/background-math_Background-math.jpg" data-natural-width=3000 data-natural-height=2000 data-position-y=center>
+    <section id="home" class="s-home target-section" data-parallax="scroll" data-image-src="images/white-background_Background-math copy 2.png" data-natural-width=3000 data-natural-height=2000 data-position-y=center>
 
       <div class="overlay"></div>
       <div class="shadow-overlay"></div>
